// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarButton matches snapshot 1`] = `
.c2 {
  background-color: black !important;
  opacity: 1 !important;
  font-size: 0.8rem !important;
  line-height: 1 !important;
  padding: 0.4rem 0.6rem !important;
  border-radius: 4px !important;
  white-space: pre;
}

.c1 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c0 {
  display: block;
  padding: 0;
  border: none;
  font-size: 1rem;
  margin: 0;
  background: transparent;
  color: #666666;
  -webkit-transition: background-color 100ms ease-in;
  transition: background-color 100ms ease-in;
  cursor: pointer;
}

.c0 svg {
  vertical-align: middle;
  pointer-events: none;
}

.c0 svg path {
  fill: currentColor;
}

.c0:focus {
  outline: 2px solid #FDBD56;
  outline-offset: -2px;
}

.c0:hover {
  color: #333333;
  background-color: rgba(0,0,0,0.1);
  outline: none;
}

.c0[disabled] {
  opacity: 0.2;
  pointer-events: none;
}

<ToolbarButton
  title="button"
>
  <Tooltip
    content="button"
    key="button"
    offset={
      Object {
        "bottom": 8,
      }
    }
    place="top"
  >
    <ToolbarButton__StyledToolbarButton
      data-for="tooltip-1"
      data-tip={true}
    >
      <button
        className="c0"
        data-for="tooltip-1"
        data-tip={true}
        type="button"
      >
        Button
        <VisuallyHidden>
          <span
            className="c1"
          >
            button
          </span>
        </VisuallyHidden>
      </button>
    </ToolbarButton__StyledToolbarButton>
    <Tooltip__StyledTooltip
      delayShow={200}
      effect="solid"
      id="tooltip-1"
      offset={
        Object {
          "bottom": 8,
        }
      }
      place="top"
    >
      <ReactTooltip
        className="c2"
        delayShow={200}
        effect="solid"
        id="tooltip-1"
        insecure={true}
        offset={
          Object {
            "bottom": 8,
          }
        }
        place="top"
        resizeHide={true}
        wrapper="div"
      >
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
          id="tooltip-1"
        >
          button
        </div>
      </ReactTooltip>
    </Tooltip__StyledTooltip>
  </Tooltip>
</ToolbarButton>
`;

exports[`ToolbarButton should style appropriately when active 1`] = `
.c2 {
  background-color: black !important;
  opacity: 1 !important;
  font-size: 0.8rem !important;
  line-height: 1 !important;
  padding: 0.4rem 0.6rem !important;
  border-radius: 4px !important;
  white-space: pre;
}

.c1 {
  position: absolute;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

.c0 {
  display: block;
  padding: 0;
  border: none;
  font-size: 1rem;
  margin: 0;
  background: transparent;
  color: #666666;
  -webkit-transition: background-color 100ms ease-in;
  transition: background-color 100ms ease-in;
  cursor: pointer;
  color: #333333;
  background-color: rgba(0,0,0,0.2);
}

.c0 svg {
  vertical-align: middle;
  pointer-events: none;
}

.c0 svg path {
  fill: currentColor;
}

.c0:focus {
  outline: 2px solid #FDBD56;
  outline-offset: -2px;
}

.c0:hover {
  color: #333333;
  background-color: rgba(0,0,0,0.1);
  outline: none;
}

.c0[disabled] {
  opacity: 0.2;
  pointer-events: none;
}

<ToolbarButton
  active={true}
  title="button"
>
  <Tooltip
    content="button"
    key="button"
    offset={
      Object {
        "bottom": 8,
      }
    }
    place="top"
  >
    <ToolbarButton__StyledToolbarButton
      active={true}
      data-for="tooltip-2"
      data-tip={true}
    >
      <button
        className="c0"
        data-for="tooltip-2"
        data-tip={true}
        type="button"
      >
        Button
        <VisuallyHidden>
          <span
            className="c1"
          >
            button
          </span>
        </VisuallyHidden>
      </button>
    </ToolbarButton__StyledToolbarButton>
    <Tooltip__StyledTooltip
      delayShow={200}
      effect="solid"
      id="tooltip-2"
      offset={
        Object {
          "bottom": 8,
        }
      }
      place="top"
    >
      <ReactTooltip
        className="c2"
        delayShow={200}
        effect="solid"
        id="tooltip-2"
        insecure={true}
        offset={
          Object {
            "bottom": 8,
          }
        }
        place="top"
        resizeHide={true}
        wrapper="div"
      >
        <div
          className="__react_component_tooltip place-top type-dark "
          data-id="tooltip"
          id="tooltip-2"
        >
          button
        </div>
      </ReactTooltip>
    </Tooltip__StyledTooltip>
  </Tooltip>
</ToolbarButton>
`;
